Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1271 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -47,13 +47,14 @@
                 display: block;
                 white-space: nowrap;
                 font-size: 20px;
-                text-decoration: none;
-                color: white;
+                text-decoration: none!important;
+                color: white!important;
                 margin-left: 20px;
                 padding: 6px 30px 6px 25px;
             }
             
             #top_div_links a:hover {
+                color: white !important;
                 background: #e36920;
                 text-decoration: none;
                 border-top: 1px solid white;
