Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1277 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -297,7 +297,7 @@
             <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
         </div>
 
-        <h3>Developers</h3>
+        <h3>Plugin Developers</h3>
         <div class="users">
             <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/">Sources</a>
             <a href="https://visualvm.dev.java.net/build.html">Build Guide</a>
