--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -93,7 +93,7 @@
                 padding: 4px;
             }
             
-            #firsth3 {
+            h3#firsth3 {
                 margin-top: 0px !important;
             }
             
