Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1300 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/features.html
+++ b/www/brandingtest/features.html
@@ -54,6 +54,7 @@
                 ['imgs/heapdump.png', 'Take and browse heap dumps.'],
                 ['imgs/coredump.png', 'Analyze core dumps.'],
                 ['imgs/appsnapshot.png', 'Analyze applications offline.'],
+                ['imgs/plugins.png', 'VisualVM can be easily extended by plugins.']
             ], 0);
         }
         
@@ -138,8 +139,8 @@
             <a name="extensibility"></a>
             <h3>Extensibility</h3>
             <div>
-                <p style="margin-top: 5px;">
-                    Since VisualVM is built on NetBeans Platform (<a href="http://platform.netbeans.org">http://platform.netbeans.org</a>), its architecture is modular and easy to extend by plugins. There are several
+                <p style="margin-top: 5px;"><a href="imgs/plugins.png" rel="lightbox[screenshots]" title="VisualVM can be easily extended by plugins."><img src="imgs/plugins_small.png"/></a>
+                    Since VisualVM is built on <a href="http://platform.netbeans.org">NetBeans Platform</a>, its architecture is modular and easy to extend by plugins. There are several
                     plugins available on VisualVM Plugin Center including 3rd party plugins, other plugins can be obtained as separate downloads from their respective authors. You can check the list
                     of currently available plugins at the <a href="https://visualvm.dev.java.net/brandingtest/plugins.html">Plugins</a> page.
                 </p>
@@ -179,7 +180,7 @@
         <div>
             <a href="#features">Features</a>
             <a href="#extensibility">Extensibility</a>
-            <a href="#system_requirements">Feature Matrix</a>
+            <a href="#feature_matrix">Feature Matrix</a>
         </div>
         
         <h3>Quick Links</h3>
