Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1302 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/download.html
+++ b/www/brandingtest/download.html
@@ -46,7 +46,7 @@
             <h1>Download</h1>
             
             <p>
-                VisualVM is available in two distributions: <b>VisualVM</b> available here at <a href="https://visualvm.dev.java.net">visualvm.dev.java.net</a> and
+                VisualVM is available in two distributions: <b>VisualVM</b> available at <a href="https://visualvm.dev.java.net">visualvm.dev.java.net</a> and
                 <b>Java VisualVM</b> available as a JDK tool in Sun JDK distribution starting from 6.0 update 7. In initial releases these tools are identical, but
                 in future Java VisualVM will be a stable tool tested with concrete JDK distribution, whereas VisualVM will be a bleeding-edge distribution with latest
                 features and bugfixes.
