Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1303 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/download.html
+++ b/www/brandingtest/download.html
@@ -54,7 +54,7 @@
             
             <p style="margin-bottom: 15px;">
                 <b>Note: </b> Be sure to read the <a href="relnotes.html">Release Notes</a> prior to installing VisualVM to be aware of minimal system requirements.
-                The main prerequisite is a correctly installed <b>Sun JDK 6.0+</b> (available at <a href="http://java.sun.com/javase/downloads/index.jsp">java.sun.com</a>) which will be used for running VisualVM.
+                The main prerequisite is a correctly installed Sun JDK 6.0+ (available at <a href="http://java.sun.com/javase/downloads/index.jsp">java.sun.com</a>) which will be used for running VisualVM.
             </p>
             
             <a name="download"></a>
