Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1304 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/download.html
+++ b/www/brandingtest/download.html
@@ -61,7 +61,7 @@
             <h3>Download</h3>
             <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
                 <div><a href="#"><span style="font-size: 14px; font-weight: bold;">VisualVM 1.0</span></a> (.zip, 7.9MB)</div>
-                <div style="margin-top: 2px;"><span style="font-size: 10px;">download <a href="#">torrent</a></span></div>
+                <div style="margin-top: 2px;"><span style="font-size: 10px;">download <a href="#"><b>torrent</b></a> - please help us to seed this torrent!</span></div>
             </div>
             
             <a style="clear: both;" name="first_steps"></a>
@@ -115,7 +115,7 @@
                 <p style="margin-bottom: 15px;">
                 If you are experiencing other problems or you need more details, try to find a solution in the <a href="https://visualvm.dev.java.net/troubleshooting.html">Troubleshooting Guide</a>.
                 If it doesn't help, you may ask for help on a <a href="mailto:users@visualvm.dev.java.net">mailing list</a> or <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=DEFECT">file a bug report</a>
-                (you have to be registered to access the mailing list or file a bug report).
+                (you need to be registered to access the mailing list or file a bug report).
                 </p>
             </div>
             
