--- a/www/brandingtest/features.html
+++ b/www/brandingtest/features.html
@@ -140,7 +140,7 @@
             <h3>Extensibility</h3>
             <div>
                 <p style="margin-top: 5px;"><a href="imgs/plugins.png" rel="lightbox[screenshots]" title="VisualVM can be easily extended by plugins."><img src="imgs/plugins_small.png"/></a>
-                    Since VisualVM is built on <a href="http://platform.netbeans.org">NetBeans Platform</a>, its architecture is modular and easy to extend by plugins. There are several
+                    Since VisualVM is built on <a href="http://platform.netbeans.org">NetBeans Platform</a>, its architecture is modular and easy to extend by plugins. There are various
                     plugins available on VisualVM Plugin Center including 3rd party plugins, other plugins can be obtained as separate downloads from their respective authors. You can check the list
                     of currently available plugins at the <a href="https://visualvm.dev.java.net/brandingtest/plugins.html">Plugins</a> page.
                 </p>
