Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1308 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -263,7 +263,7 @@
             
             <h3>VisualVM on the Web</h3>
             <div id="ontheweb">
-                <p><a class="ontheweb_title" href="http://java.sun.com/javaone/sf/media_shell.jsp?id=FRdamp267672">VisualVM Keynote Video</a>: James Gosling's keynote at JavaOne 2008 by Tomas Hurka & Luis-Miguel Alventosa.
+                <p><a class="ontheweb_title" href="http://java.sun.com/javaone/sf/media_shell.jsp?id=FRdamp267672">JavaOne: VisualVM General Session</a>: James Gosling's general session at JavaOne 2008 by Tomas Hurka & Luis-Miguel Alventosa.
                 </p>
                 
                 <p><a class="ontheweb_title" href="http://developers.sun.com/learning/javaoneonline/2008/pdf/TS-6000.pdf">Improving Application Performance with Monitoring and Profiling Tools</a>:
