Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1310 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -227,7 +227,7 @@
                 var bannertextcontainer = document.getElementById("top_div_info");
                 alert(bannertextcontainer);
                 var bannertext = bannertextcontainer.innerHTML;
-                bannertext += " <a href=\"javascript:showScreenshots();\">Show screenshots...</a>";
+                bannertext += " <a href=\"javascript:showScreenshots();\">See screenshots.</a>";
                 bannertextcontainer.innerHTML = bannertext;
             }
            
