--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -38,6 +38,11 @@
                 padding-right: 20px;
             }
             
+            #top_div_info a, #top_div_info a:visited, #top_div_info a:link.selfref, #top_div_info a:visited.selfref {
+                color: #5b83a9 !important;
+                text-decoration: underline !important;
+            }
+            
             #top_div_links {
                 background: #f47123 url(imgs/main_links_background.png) repeat-y;
                 padding: 0px;
