Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1314 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -38,9 +38,8 @@
                 padding-right: 20px;
             }
             
-            #top_div_info a, #top_div_info a:visited, #top_div_info a:link.selfref, #top_div_info a:visited.selfref {
-                color: #5b83a9 !important;
-                text-decoration: underline !important;
+            #top_div_info a:hover {
+                color: #f47123 !important;
             }
             
             #top_div_links {
