--- a/www/brandingtest/ontheweb.html
+++ b/www/brandingtest/ontheweb.html
@@ -14,7 +14,7 @@
     <style>            
 
         #contents_main {
-            margin-right: 0px;
+            margin-right: 0px !important;
         }
             
         #contents_main p {
