Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1319 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/template1col.html
+++ b/www/brandingtest/template1col.html
@@ -6,7 +6,7 @@
     <style>            
 
         #contents_main {
-            margin-right: 0px;
+            margin-right: 0px !important;
         }
             
         #contents_main p {
