--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -317,6 +317,7 @@
             
             <h3>News</h3>
             <div id="news" style="margin-bottom: 10px;">
+                <!-- Please always display 3 items here. The item to be removed should be archived on news.html -->
                 <p class="news_highlight"><span class="news_date">May 6th, 2008:</span> VisualVM 1.0 RC released. This is mainly a stabilization
                     release: many bugs have been fixed and performance and memory management have been significantly improved. The only new feature is
                     the Start Page which contains useful links to VisualVM documentation and JDK monitoring and troubleshooting guides.
@@ -340,7 +341,8 @@
             
             <h3>VisualVM on the Web</h3>
             <div id="ontheweb">
-                <div><a class="ontheweb_title" href="http://java.sun.com/javaone/sf/media_shell.jsp?id=FRdamp267672">VisualVM at JavaOne General Session</a>: James Gosling's general session at JavaOne 2008 by Tomas Hurka & Luis-Miguel Alventosa.</div>
+                <!-- Please always display 5 items here. The item to be removed should be archived on ontheweb.html -->
+                <div><a class="ontheweb_title" href="http://java.sun.com/javaone/sf/media_shell.jsp?id=FRdamp267672">VisualVM at JavaOne General Session</a>: James Gosling's general session at JavaOne 2008 by Tomas Hurka and Luis-Miguel Alventosa.</div>
                 <div><a class="ontheweb_title" href="http://developers.sun.com/learning/javaoneonline/2008/pdf/TS-6000.pdf">Improving Application Performance with Monitoring and Profiling Tools</a>:
                 Technical Session at JavaOne 2008 by Gregg Sporar and Jaroslav Bachorik.</div>
                 <div><a class="ontheweb_title">VisualVM BOF</a>: VisualVM BOF at JavaOne 2008 in SF by Tomas Hurka</div>
