Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1321 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -353,7 +353,7 @@
                 </p>
             </div>
             
-            <div class="h2" id="subprojects">
+            <div class="h2" id="subprojects" style="margin-top: 0px;">
                 <h2>Subprojects</h2>
 
                 <table width="100%">
