Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1322 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -310,9 +310,9 @@
             <h3>VisualVM Is Designed For You:</h3>
             <div id="spotlight">
                 <div><b>Application Developer:</b> Monitor, profile, take thread dumps, browse heap dumps</div>
-                <div><b>System Administrator:</b> Monitor and control Java applications accross the entire network</div>
-                <div><b>Quality Engineer:</b> Ask the users for appropriate data, analyze dumps and snapshots</div>
+                <div><b>System Administrator:</b> Monitor and control Java applications across the entire network</div>
                 <div><b>Java Application User:</b> Create bugreports containing all the necessary information</div>
+                <div><b>Quality Engineer:</b> Ask the users to provide Application Snapshots, analyze them offline</div>
             </div>
             
             <h3>News</h3>
