--- a/www/brandingtest/features.html
+++ b/www/brandingtest/features.html
@@ -187,7 +187,7 @@
         <div>
             <a href="javascript:showScreenshots();">Screenshots</a>
             <a href="https://visualvm.dev.java.net/brandingtest/plugins.html">Plugins</a>
-            <a href="#">System Requirements</a>
+            <a href="relnotes.html#system_requirements">System Requirements</a>
             <a href="https://visualvm.dev.java.net/issues/enter_bug.cgi?issue_type=FEATURE">Request a Feature</a>
             <a href="mailto:feedback@visualvm.dev.java.net">Send Feedback</a>
         </div>
