Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1327 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/relnotes.html
+++ b/www/brandingtest/relnotes.html
@@ -77,7 +77,7 @@
             <h3>Known Problems</h3>
             <div>                
                 <ul>
-                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: Applications running on JDK 7 build 27 and newer are not recognized
+                    <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=152">Issue 152</a>: VisualVM encountering problems with JDK 7 b27 and newer
                     </li>
                     
                     <li><a href="https://visualvm.dev.java.net/issues/show_bug.cgi?id=120">Issue 120</a>: JMX application datasource cannot be reused on application restart
