Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1328 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/relnotes.html
+++ b/www/brandingtest/relnotes.html
@@ -54,7 +54,7 @@
                 <p style="margin-top: 5px;">
                     <b>Supported OS:</b><br>
                     <ul>
-                        <li>Microsoft Windows: 32bit &amp; 64bit
+                        <li>Microsoft Windows (XP, Vista, Server): 32bit &amp; 64bit
                         </li>
 
                         <li>Linux: Intel platform, 32bit &amp; 64bit
