Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1330 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/plugins.html
+++ b/www/brandingtest/plugins.html
@@ -141,7 +141,7 @@
                 
                 <h4>Third Party</h4>
                 
-                <p><a href="imgs/localremoteapps.png" rel="lightbox[plugins]" title="Terracotta Plugin."><img src="imgs/localremoteapps_small.png"/></a><b>Terracotta Plugin.</b>
+                <p><a href="imgs/terracotta.png" rel="lightbox[plugins]" title="Terracotta Plugin."><img src="imgs/terracotta_small.png"/></a><b>Terracotta Plugin.</b>
                 Visit <a href="http://www.terracotta.org/confluence/display/orgsite/VisualVM">Terracotta VisualVM Plugin page</a> at www.terracotta.org for details.<br>
                 <i>Available at <a href="http://www.terracotta.org/confluence/display/orgsite/VisualVM">www.terracotta.org</a></i>
                 </p>
