Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1332 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -311,7 +311,7 @@
     <div id="contents_contents">
         <div id="contents_main">
             
-            <h3>VisualVM Is Designed For You:</h3>
+            <h3>VisualVM Is Designed For You</h3>
             <div id="spotlight">
                 <div><b>Application Developer:</b> Monitor, profile, take thread dumps, browse heap dumps</div>
                 <div><b>System Administrator:</b> Monitor and control Java applications across the entire network</div>
