Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1335 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/download.html
+++ b/www/brandingtest/download.html
@@ -102,7 +102,7 @@
                     </li>
                     
                     <li>
-                        <i>VisualVM startup terminates by Error Starting VisualVM Dialog - unsupported version of Java: </i>this typically happens when JRE is used to run VisualVM,
+                        <i>VisualVM startup terminates by Error Starting VisualVM Dialog - unsupported version of Java: </i>this typically happens when JRE or incorrect JDK version is used to run VisualVM,
                         make sure VisualVM is running on Sun JDK 6.0+
                     </li>
                     
