Testing www customizations
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1339 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/brandingtest/testindex.html
+++ b/www/brandingtest/testindex.html
@@ -103,7 +103,7 @@
             }
             
             span.news_date {
-                font-style: italic;
+                /*font-style: italic;*/
                 font-weight: bold;
             }
             
