--- a/www/brandingtest/features.html
+++ b/www/brandingtest/features.html
@@ -72,7 +72,7 @@
             <h1>Features</h1>
             
             <p>
-                VisualVM is a tool to monitor and troubleshoot Java applications. It runs on JDK 6.0, but is able to monitor applications running on JDK 1.4 and higher. It utilizes
+                VisualVM is a tool to monitor and troubleshoot Java applications. It runs on Sun JDK 6, but is able to monitor applications running on JDK 1.4 and higher. It utilizes
                 various available technologies like jvmstat, JMX, the Serviceability Agent (SA), and the Attach API to get the data and automatically uses the fastest and most lightweight technology
                 to impose minimal overhead on monitored applications.
             </p>
@@ -156,7 +156,7 @@
             <div>
                 <center style="margin-top: 15px; margin-bottom: 15px;">
                     <table border="1" cellspacing="0" width="95%">
-                        <tr><td style="vertical-align: middle;"><b>Feature</b></td><td style="text-align:center;" width="15%"><b>JDK 1.4.2<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 5.0<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6.0<br><small>local</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6.0<br><small>remote</small></b></td></tr>
+                        <tr><td style="vertical-align: middle;"><b>Feature</b></td><td style="text-align:center;" width="15%"><b>JDK 1.4.2<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 5<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6<br><small>local</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6<br><small>remote</small></b></td></tr>
                         <tr><td>Overview</td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td></tr>
                         <tr><td>System Properties (in Overview)</td><td style="text-align:center;">&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td>&nbsp</td></tr>
                         <tr><td>Monitor</td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td><td style="text-align:center;"><img src="https://visualvm.dev.java.net/images/check.png"/></td></tr>
