--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -2,4 +2,8 @@
     document.body.style.display = "none";
 </script>
 
+<!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
+<!-- -->
+
 <script src="https://visualvm.dev.java.net/brandingtest/brandingtest.js" type="text/javascript"></script>
