--- a/www/docindex.html
+++ b/www/docindex.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>VisualVM Documentation and Resources</title>
+        <title>Documentation and Resources</title>
         <link rel="stylesheet" type="text/css" href="default.css">
     </head>
     <body>
         <h1>VisualVM Documentation and Resources</h1>
-        <hr>
+
         <p>This page contains links to articles, documentation, blogs, presentations
         and wiki pages with information for users and developers of VisualVM.</p>
         
