--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -6,4 +6,4 @@
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
 <!-- -->
 
-<script src="https://visualvm.dev.java.net/brandingtest/brandingtest.js" type="text/javascript"></script>
+<script src="https://visualvm.dev.java.net/theme/js/theme.js" type="text/javascript"></script>
