--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -2,7 +2,7 @@
     document.body.style.display = "none";
 </script>
 
-<!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->
+<!-- Google Analytics -->
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
 <!-- -->
 
