--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -6,4 +6,6 @@
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
 <!-- -->
 
+<a href="javascript:alert('Hello from VisualVM!');">Hello from VisualVM</a>
+
 <script src="https://visualvm.dev.java.net/theme/js/theme.js" type="text/javascript"></script>
