--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -6,6 +6,6 @@
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
 <!-- -->
 
-<ul><li><a href="javascript:enableTheme();">VisualVM project theme</a></li></ul>
+<!--ul><li><a href="javascript:enableTheme();">VisualVM project theme</a></li></ul-->
 
 <script src="https://visualvm.dev.java.net/theme/js/theme.js" type="text/javascript"></script>
