--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -3,7 +3,7 @@
 </script>
 
 <!-- Google Analytics -->
-<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <!-- -->
 
 <!--ul><li><a href="javascript:enableTheme();">VisualVM project theme</a></li></ul-->
