Fixing theme switcher
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1376 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/themeswitch.html
+++ b/www/themeswitch.html
@@ -35,9 +35,9 @@
     
     var html =  "<h1>Project Theme Switcher</h1> <br><p>Current theme: <b>" + (disableTheme != "true" ? "customized VisualVM theme" : "default dev.java.net theme") + "</b><br>"
     if (disableTheme != "true")
-        html += "Switch to <a href=\"javascript:alert('disableTheme()');disableTheme();\"><b>default dev.java.net theme</b></a>"
+        html += "Switch to <a href=\"javascript:setCookie(DISABLE_VISUALVM_THEME, 'true');history.go(0);\"><b>default dev.java.net theme</b></a>"
     else
-        html += "Switch to <a href=\"javascript:alert('enableTheme()');enableTheme();\"><b>customized VisualVM theme</b></a>"
+        html += "Switch to <a href=\"javascript:setCookie(DISABLE_VISUALVM_THEME, 'false');history.go(0);\"><b>customized VisualVM theme</b></a>"
     html += "</p>"
     document.write(html);
     
