--- a/www/themeswitch.html
+++ b/www/themeswitch.html
@@ -35,9 +35,9 @@
     
     var html =  "<h1>Project Theme Switcher</h1> <br><p>Current theme: <b>" + (disableTheme != "true" ? "customized VisualVM theme" : "default dev.java.net theme") + "</b><br>"
     if (disableTheme != "true")
-        html += "Switch to <a href=\"javascript:x1();\"><b>default dev.java.net theme</b></a>"
+        html += "Switch to <a href=\"javascript:disableTheme();\"><b>default dev.java.net theme</b></a>"
     else
-        html += "Switch to <a href=\"javascript:x1();\"><b>customized VisualVM theme</b></a>"
+        html += "Switch to <a href=\"javascript:enableTheme();\"><b>customized VisualVM theme</b></a>"
     html += "</p>"
     document.write(html);
     
