--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -6,6 +6,12 @@
 <script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <!-- -->
 
-<ul><li><a href="javascript:customTheme();">VisualVM project theme</a></li></ul>
+<ul>
+    <li><a href="https://visualvm.dev.java.net/features.html">Features</a></li>
+    <li><a href="https://visualvm.dev.java.net/download.html">Download</a></li>
+    <li><a href="https://visualvm.dev.java.net/documentation.html">Documentation</a></li>
+    <li><a href="https://visualvm.dev.java.net/plugins.html">Plugins</a></li>
+    <li><a href="javascript:customTheme();">VisualVM project theme</a></li>
+</ul>
 
 <script src="https://visualvm.dev.java.net/theme/js/theme.js" type="text/javascript"></script>
