--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -9,7 +9,7 @@
 <ul>
     <li><a href="https://visualvm.dev.java.net/features.html">Features</a></li>
     <li><a href="https://visualvm.dev.java.net/download.html">Download</a></li>
-    <li><a href="https://visualvm.dev.java.net/documentation.html">Documentation</a></li>
+    <li><a href="https://visualvm.dev.java.net/docindex.html">Documentation</a></li>
     <li><a href="https://visualvm.dev.java.net/plugins.html">Plugins</a></li>
     <li><a href="javascript:customTheme();">VisualVM project theme</a></li>
 </ul>
