Fixed license header
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1386 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/legal/gplv2+ce.html
+++ b/www/legal/gplv2+ce.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/xhtml1-strict.dtd">
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ascii"/><title xmlns="http://www.w3.org/1999/xhtml">OpenJDK: GPLv2 + Classpath Exception</title></head><body><div id="main">
+<html>
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=ascii"/>
+        <title xmlns="http://www.w3.org/1999/xhtml">GPLv2 + Classpath Exception</title>
+</head>
+<body>
+<div id="main">
 <h1 xmlns="http://www.w3.org/1999/xhtml">GNU General Public License, version 2,<br/>
 with the Classpath Exception</h1>
 <pre xmlns="http://www.w3.org/1999/xhtml">
@@ -351,4 +357,6 @@ as provided by Sun in the LICENSE file that accompanied this code."
     the library, but you are not obligated to do so.  If you do not wish to do
     so, delete this exception statement from your version.
 </pre>
-</body></html>
+</div>
+</body>
+</html>
