Fixed project tools
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1387 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -6,12 +6,6 @@
 <script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <!-- -->
 
-<ul>
-    <li><a href="https://visualvm.dev.java.net/features.html">Features</a></li>
-    <li><a href="https://visualvm.dev.java.net/download.html">Download</a></li>
-    <li><a href="https://visualvm.dev.java.net/docindex.html">Documentation</a></li>
-    <li><a href="https://visualvm.dev.java.net/plugins.html">Plugins</a></li>
-    <li><a href="javascript:customTheme();">VisualVM project theme</a></li>
-</ul>
+<ul id="project_tools_2"></ul>
 
 <script src="https://visualvm.dev.java.net/theme/js/theme.js" type="text/javascript"></script>
