Links to Home must point to root instead of index.html to correctly display the frontpage  - index.html doesn't display portal messages like 'If you were registered and logged in...'
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1425 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -65,7 +65,7 @@
             <h1>News</h1>
             
             <p style="margin-bottom: 15px;">
-                This page lists all previously presented news. To see the latest news please navigate to <a href="index.html">VisualVM frontpage</a>.
+                This page lists all previously presented news. To see the latest news please navigate to <a href="https://visualvm.dev.java.net">VisualVM frontpage</a>.
             </p>
             
             <a name="news"></a>
