--- a/www/ontheweb.html
+++ b/www/ontheweb.html
@@ -79,7 +79,7 @@
             <h1>On The Web</h1>
             
             <p>
-                This page lists all previously presented articles, documents and blog posts related to VisualVM from all around the Web. To see the latest links please navigate to <a href="index.html">VisualVM frontpage</a>.
+                This page lists all previously presented articles, documents and blog posts related to VisualVM from all around the Web. To see the latest links please navigate to <a href="https://visualvm.dev.java.net">VisualVM frontpage</a>.
                 If you know about some interesting resource which should be linked here, please let us know on a <a href="mailto:feedback@visualvm.dev.java.net">mailing list</a>.
             </p>
             
