Images for profiler blog
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1494 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,11 @@
             <h3>News</h3>
             <div id="news">
                 
+                <p><span class="news_date">July 8th, 2008:</span> Project pages redesigned. We have updated project pages to be visually consistent with the tool,
+                    to provide all the information necessary for VisualVM users and plugin developers and to be easy to use. If you can't find the information you are
+                    searching for, please let us know on a <a href="mailto:feedback@visualvm.dev.java.net">mailing list</a>.
+                </p>
+                
                 <p><span class="news_date">May 6th, 2008:</span> VisualVM 1.0 RC released. This is mainly a stabilization
                     release: many bugs have been fixed and performance and memory management have been significantly improved. The only new feature is
                     the Start Page which contains useful links to VisualVM documentation and JDK monitoring and troubleshooting guides.
