TDA 2.0 plugin release.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1572 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/news.html
+++ b/www/news.html
@@ -72,6 +72,10 @@
             <h3>News</h3>
             <div id="news">
                 
+                <p><span class="news_date">July 8th, 2008:</span> JDK 6 Update 7 with Java VisualVM released. Starting from JDK 6 Update 7, VisualVM is also available
+                    as a JDK tool called Java VisualVM. This way you will get a stable tool tested with respective JDK distribution. Latest Sun JDK 6 update can be downloaded <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
+                </p>
+                
                 <p><span class="news_date">July 8th, 2008:</span> Project pages redesigned. We have updated project pages to be visually consistent with the tool,
                     to provide all the information necessary for VisualVM users and plugin developers and to be easy to use. If you can't find the information you are
                     searching for, please let us know on a <a href="mailto:feedback@visualvm.dev.java.net">mailing list</a>.
