Developer.com awards notification
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1641 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -318,11 +318,9 @@
     <div id="contents_contents">
         <div id="contents_main">
             
-            <h3>VisualVM Is Designed For You</h3>
+            <h3>Vote For VisualVM!</h3>
             <div id="spotlight">
-                <div><b>Application Developer:</b> Monitor, profile, take thread dumps, browse heap dumps</div>
-                <div><b>System Administrator:</b> Monitor and control Java applications across the entire network</div>
-                <div><b>Java Application User:</b> Create bug reports containing all the necessary information</div>
+                <div><b>The Product of the Year 2009 awards</b> are in progress at Developer.com till Monday, December 15, 2008. If you like the VisualVM tool, please support it and <b>give it your vote</b> in the <a href="http://solutions.internet.com/index.php/5376_default#p3">Development Utility of the Year category</a>!</div>
             </div>
             
             <h3>News</h3>
