--- a/www/index.html
+++ b/www/index.html
@@ -320,7 +320,7 @@
             
             <h3>Vote For VisualVM!</h3>
             <div id="spotlight">
-                <div><b>The Product of the Year 2009 awards</b> are in progress at <a href="http://www.developer.com">Developer.com</a> till Monday, December 15, 2008. If you like the VisualVM tool, please support it and <b>give it your vote</b> in the <a href="http://solutions.internet.com/index.php/5376_default#p3">Development Utility of the Year category</a>!</div>
+                <div><b>The Product of the Year 2009 awards</b> are in progress at Developer.com till Monday, December 15, 2008. If you like the VisualVM tool, please support it and <b>give it your vote</b> in the <a href="http://solutions.internet.com/index.php/5376_default#p3">Development Utility of the Year category</a>!</div>
             </div>
             
             <h3>News</h3>
