upadting btrace plugin source location
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1657 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/plugins.html
+++ b/www/plugins.html
@@ -148,7 +148,7 @@
                 <p><a href="images/btrace.png" rel="lightbox[plugins]" title="BTrace Plugin."><img src="images/btrace_small.png"/></a><b>BTrace Plugin.</b>
                 BTrace is a dynamic tracing tool for Java. BTrace inserts tracing actions into the classes of a running Java program and hotswaps the traced program classes. Visit
                 <a href="https://btrace.dev.java.net">https://btrace.dev.java.net</a> for more details.<br>
-                <i>Available in <a href="https://visualvm.dev.java.net/source/browse/visualvm/plugins/btrace/">VisualVM source repository</a></i>
+                <i>Available in <a href="https://btrace.dev.java.net/source/browse/btrace/">BTrace source repository</a></i>
                 </p>
                 
                 <h4>Third Party</h4>
