--- a/www/news.html
+++ b/www/news.html
@@ -71,6 +71,11 @@
             <a name="news"></a>
             <h3>News</h3>
             <div id="news">
+
+                <p><span class="news_date">July 8th, 2008:</span> VisualVM 1.0 released. VisualVM is a free opensource visual tool integrating several
+                    commandline JDK tools and lightweight performance and memory profiling capabilities. The tool is available under the <a href="https://visualvm.dev.java.net/legal/gplv2+ce.html">GNU General
+                    Public License v2 with Classpath Exception</a> license, binaries can be downloaded from <a href="download.html">Download</a> page, sources are available in <a href="https://visualvm.dev.java.net/source/browse/visualvm/visualvm/?only_with_tag=release10"><code>release10</code></a> branch.
+                </p>
                 
                 <p><span class="news_date">July 8th, 2008:</span> JDK 6 Update 7 with Java VisualVM released. Starting from JDK 6 Update 7, VisualVM is also available
                     as a JDK tool called Java VisualVM. This way you will get a stable tool tested with respective JDK distribution. Latest Sun JDK 6 update can be downloaded <a href="http://java.sun.com/javase/downloads/index.jsp">here</a>.
