eclipse launcher for visualvm - improved layout
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1660 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -52,28 +52,28 @@
                         A basic integration of  <a href="http://visualvm.dev.java.net">VisualVM</a> into <a href="http://www.eclipse.org">Eclipse IDE</a>
                     </h2>
 
-                    <a name="installation"></a>
-                    <h3>Installation</h3>
-                    <div>
-                        Get <a href="https://visualvm.dev.java.net/files/documents/7163/119087/visualvm-launcher.zip">visualm-launcher.zip</a> and unpack it
-                        to your Eclipse installation folder.
+                    <a name="download"></a>
+                    <h3>Download</h3>
+                    <div style="background: #f0f1f2; padding: 10px; padding-left: 20px; margin-bottom: 10px;">
+                        <div><a href="https://visualvm.dev.java.net/files/documents/7163/119087/visualvm-launcher.zip"><span style="font-size: 14px; font-weight: bold;">VisualVM Launcher</span></a> (.zip, 32kB)</div>
                     </div>
 
-                    <a name="usage"></a>
+                    <a style="clear: both;" name="installation"></a>
+                    <h3>Installation</h3>
+                    <div>
+                        <ol>
+                            <li>Unzip the archive into your Eclipse installation directory</li>
+                        </ol>
+                    </div>
+                    <a style="clear: both;" name="usage"></a>
                     <h3>Usage</h3>
                     <div>
-                        <p>There is a new launcher named <b>"VisualVM Launcher"</b> registered in Eclipse. You can assign this launcher
-                            to an application's <b>Run Configuration</b> to have the VisualVM started and connected in monitoring mode right
-                        after the application has been started.</p>
-                        <h4>Using the launcher:</h4>
                         <ol>
                             <li>
-                                <p>Create a new application configuration</p>
-                                <img src="images/eclipse/configuration.png" alt="Application Run Configuration" width="500px"/>
+                                Create a new <a href="images/eclipse/configuration.png" target="_new">application configuration</a>
                             </li>
                             <li>
-                                <p>Choose the <b>"VisualVM Launcher"</b> as the application launcher</p>
-                                <img src="images/eclipse/launcher.png" alt="Selecting VisualVM Launcher"/>
+                                Choose the <b>"VisualVM Launcher"</b> as the <a href="images/eclipse/launcher.png" target="_new">application launcher</a>
                             </li>
                             <li>Run/Debug the application with the created configuration to have VisualVM started automatically</li>
                         </ol>
@@ -82,8 +82,7 @@
                     <a name="preferences"></a>
                     <h3>Configuration</h3>
                     <ul>
-                        <li>Go to <b>Run/Debug-Launching-VisualVM Configuration</b> preferences section<br/>
-                            <img src="images/eclipse/preferences.png" alt="VisualVM Launcher Preferences" width="500px"/>
+                        <li>Go to <b>Run/Debug-Launching-VisualVM Configuration</b> <a href="images/eclipse/preferences.png" target="_new">preferences section</a>
                             <p>
                                 Here you can modify:
                                 <ul>
@@ -93,7 +92,6 @@
                             </p>
                         </li>
                     </ul>
-
                 </div>
             </div>
 
