visualvm eclipse launcher - adding a missing ling
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1661 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -99,6 +99,7 @@
 
                 <h3 class="first">On This Page</h3>
                 <div>
+                    <a href="#download">Download</a>
                     <a href="#installation">Installation</a>
                     <a href="#usage">Usage</a>
                     <a href="#preference">Configuration</a>
