visualvm eclipse launcher - fixing title
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1662 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/eclipse-launcher.html
+++ b/www/eclipse-launcher.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title>Eclipse launcher for VisualVM</title>
+        <title>A basic integration of  VisualVM into Eclipse IDE</title>
 
         <style>
 
@@ -47,10 +47,6 @@
                 <div id="contents_main">
 
                     <h1>Eclipse launcher for VisualVM</h1>
-
-                    <h2>
-                        A basic integration of  <a href="http://visualvm.dev.java.net">VisualVM</a> into <a href="http://www.eclipse.org">Eclipse IDE</a>
-                    </h2>
 
                     <a name="download"></a>
                     <h3>Download</h3>
